# FFmpeg_web_app

./: .flake8  .gitignore  README.md  checker.bat  daddy_issues.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: quality_analyzer.py  utils.py  video_converter.py
src/processing/: conversion.py  file_handler.py
src/ui/: config.py  results.py  settings.py
tests/: test.py  test_quality_analyzer.py  test_video_converter.py
