[project]
name = "ffmpeg-web-app"
version = "0.1.0"
description = "A Streamlit web app that wraps FFmpeg for video conversion and quality analysis."
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0.76",
    "scikit-image>=0.21.0",
    "streamlit>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '/(\.git|\.venv|build|dist|tests)/'

[tool.isort]
profile = "black"
src_paths = ["src"]
known_first_party = ["src"]
skip_glob = ["tests/*", ".venv/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["main.py", "src"]
exclude = ["tests", "\\.venv"]

[tool.pylint.main]
py-version = "3.10"
source-roots = ["."]
ignore = ["tests", ".venv"]

[tool.pylint.typecheck]
ignored-modules = ["cv2", "skimage", "skimage.metrics"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0718",  # broad-exception-caught (acceptable in UI handlers)
    "R0914",  # too-many-locals
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
]

[tool.coverage.run]
omit = ["src/ui/*"]
